--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,1 +1,115 @@
-{\rtf1}
+*{
+  margin: 0;
+  padding: 0;
+  font-family: Nunito Sans, sans-serif;
+}
+.button {
+
+}
+.header{
+  width: 100%;
+  min-height: 83px;
+  background-color: #131313;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 0.75em;
+}
+.logo__heading{
+  font-size: 1em;  
+  line-height: 15px;
+  color: #E3B873;
+  padding: 0 6em 0 5em;
+  text-transform: uppercase;
+}
+.header__list{
+  display: flex;
+  gap: 2em;
+  list-style-type: none;
+}
+
+.header__link{
+  font-size: 1em;
+  color: white;
+  gap: 0.25rem;
+  text-decoration: none;
+}
+.link_wrapper{
+  color: #E3B873;
+}
+.header__number{
+  color: #E3B873;
+  padding: 0 1rem 0 0.5rem;
+}
+.header__btn{
+  font-weight: bold;
+  font-style: italic;
+  font-size: 1.1em;
+  text-transform: uppercase;
+  border: none;
+  color: white;
+  box-shadow: 0px 5px 15px 0px #E3B87333;
+  background: #E3B873;
+  border-radius: 2px;
+  padding: 13px 33px;
+  cursor: pointer;
+}
+.hero{
+  justify-content: space-between;
+  height: 707px;
+  width: 100%;
+  background-image: url(../img/png/image\ 4.3.png);
+  background-repeat: no-repeat;
+
+}
+.hero__conteiner{
+  width: 100%;
+  height: 305px; 
+  padding: 194px 630px 208px 134px;
+  background: #000000B2;
+  opacity: 90%;
+}
+.hero__heading{
+  font-size: 40px;
+  line-height: 53px;
+  color: white;
+  text-transform: uppercase;
+}
+.hero__heading_wrap{
+  color: #E3B873;
+}
+.hero__text{
+  width: 504px;
+  height: 89px; 
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 36.01px;
+  color: #fff;
+  padding: 19px 0 61px 0;
+}
+.hero__btn-orange{
+  font-size: 11px;
+  font-style: italic;
+  font-weight: 100;
+  text-transform: uppercase;
+  border: none;
+  color: white;
+  box-shadow: 0px 5px 15px 0px #E3B87333;
+  background: #E3B873;
+  border-radius: 2px;
+  padding: 20px 42px;
+  cursor: pointer;
+  margin-right: 1rem;
+}
+.hero__btn-transparency{
+  font-size: 11px;
+  font-style: italic;
+  font-weight: 100;
+  text-transform: uppercase;
+  color: white;
+  border:  1px solid #fff;
+  background : transparent;
+  border-radius: 2px;
+  padding: 20px 30px;
+  cursor: pointer;
+}
