--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,29 +3,40 @@
   padding: 0;
   font-family: Nunito Sans, sans-serif;
 }
-.button {
-
+button:hover{
+  background-color:#c7994e;
+  transition: 0.7s;
+}
+button:active{
+  transform: scale(0.5);
 }
 .header{
   width: 100%;
-  min-height: 83px;
+  height: 83px;
+  font-size: 0.75em;
   background-color: #131313;
   display: flex;
+  justify-content: center;
   align-items: center;
+}
+.header__container{
+  display: flex;
+  flex-flow: row nowrap;
+  align-content: center;
   justify-content: space-between;
-  font-size: 0.75em;
+  align-items: center;
 }
 .logo__heading{
   font-size: 1em;  
   line-height: 15px;
   color: #E3B873;
-  padding: 0 6em 0 5em;
   text-transform: uppercase;
 }
 .header__list{
   display: flex;
   gap: 2em;
   list-style-type: none;
+  padding: 0 7em;
 }
 
 .header__link{
@@ -34,12 +45,16 @@
   gap: 0.25rem;
   text-decoration: none;
 }
+.header__link:hover{
+  background-color:#c7994e;
+  transition: 0.5s;
+}
 .link_wrapper{
   color: #E3B873;
 }
 .header__number{
   color: #E3B873;
-  padding: 0 1rem 0 0.5rem;
+  padding-right: 5em;
 }
 .header__btn{
   font-weight: bold;
@@ -60,16 +75,17 @@
   width: 100%;
   background-image: url(../img/png/image\ 4.3.png);
   background-repeat: no-repeat;
-
+  background-size: cover;
 }
-.hero__conteiner{
-  width: 100%;
+.hero__container{
+  width: fit-content;
   height: 305px; 
-  padding: 194px 630px 208px 134px;
+  padding: 194px 0 208px 134px;
   background: #000000B2;
   opacity: 90%;
 }
 .hero__heading{
+  width: fit-content;
   font-size: 40px;
   line-height: 53px;
   color: white;
@@ -101,6 +117,11 @@
   cursor: pointer;
   margin-right: 1rem;
 }
+.hero__btn-orange:hover{
+  background : transparent;
+  transition: 0.7s;
+  border: 1px solid #fff;
+}
 .hero__btn-transparency{
   font-size: 11px;
   font-style: italic;
@@ -112,4 +133,228 @@
   border-radius: 2px;
   padding: 20px 30px;
   cursor: pointer;
+}
+.projects__container{
+  height: 1074px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: space-between;
+  align-items: center;
+  align-items: center;
+  background-color: #131313;
+  color: #fff;
+}
+.projects__wrap{
+  display: flex;
+  flex-direction: row;
+}
+.projects__CompletedProjects{
+  width: 390px;
+  padding-top: 176px;
+}
+.CompletedProjects__heading{
+  font-size: 27px;
+  font-weight: 500;
+  color: #E3B873;
+  text-transform: uppercase;
+}
+.CompletedProjects__text{
+  width: 442px;
+  font-size: 14px;
+  line-height: 27px;
+  padding: 34px 0 42px 0;
+}
+.project__describe{
+  display: grid;
+  grid-template: 50% 50%/ 60% 40%;
+
+}
+.projects__example{
+  padding: 107px 0px 0 5em;
+}
+.example__list{
+  display: flex;
+  text-transform: uppercase;
+  list-style-type: none;
+  color: #ffffff59;
+  font-weight: bold;
+  opacity: 100%;
+  font-size: 14px;
+  gap: 4em;
+  padding-bottom: 53px;
+}
+.example__items_link_wrap{
+  color: #E3B873;
+  text-decoration: underline;
+  opacity: 100%;
+}
+.control__container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 90px;
+}
+.control__heading{
+  font-size: 20px;
+  text-transform: uppercase;
+  font-family:  Yeseva One;
+}
+.control__img{
+  padding: 15px 0 30px 0;
+  max-height: 45px;
+}
+.control__video{
+  min-width: 817px;
+}
+hr{
+  width: 55px;
+  margin: 63px 0 34px 0;
+  color: #E3B873;
+}
+.control__text{
+  color: #131313;
+  max-width: 682px;
+  height: 130px;
+  text-align: center;
+  line-height: 36.83px;
+  font-size: 18px;
+}
+.contacts{
+  padding-top: 92px;
+}
+.contacts__text{
+  width: 220px;
+  border: none;
+  border-bottom: 1px outset #3636364D;
+  padding: 8px 0;
+  margin-right: 5em;
+}
+.contacts_text::placeholder{
+  color: #131313;
+  border: none;
+  outline: 0;
+}
+.contact__agree:focus{
+  color: #131313;
+  border: none;
+  outline: 0;
+}
+.contacts__btn{
+  font-style: italic;
+  font-size: 1.1em;
+  text-transform: uppercase;
+  border: none;
+  color: white;
+  box-shadow: 0px 5px 15px 0px #E3B87333;
+  background: #E3B873;
+  border-radius: 2px;
+  padding: 20px 75px;
+  cursor: pointer;
+}
+.contacts__agree{
+  color: #131313;
+  font-size: 14px;
+  line-height: 22px;
+  padding-top: 34px;
+}
+.agree_checkbox[type='checkbox']:checked + label {
+  background-color: #E3B87333; 
+  font-weight: bold;
+  transition: 0.3s ease;
+}
+.TYPES-OF-REPAIR{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
+  padding-top: 43em;
+}
+.TYPES-OF-REPAIR__img{
+  height: 60px;
+  padding: 18px 0 31px 0;
+}
+.TYPES-OF-REPAIR__wrap{
+  color:  #363636;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between
+
+}
+.Redecorating{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url(../img/png/Mask\ Group\ \(1\).png);
+  height: 421px;
+  width: 392px;
+}
+.Overhaul{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url(../img/png/image\ 3.jpg);
+  height: 421px;
+  width: 392px;
+  margin: 0 30px 0 30px;
+}
+.DesignerRepair{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url(../img/png/image\ 3.png);
+  height: 421px;
+  width: 392px;
+}
+.TYPES-OF-REPAIR_container{
+  background-color: #fff;
+  height: 286px;
+  min-width: 330px;
+  padding-top: 25px;
+  position: relative;
+  top: 300px;
+}
+.Redecorating_heading{
+  font-family: Yeseva One;
+  font-size: 18px;
+  font-weight: bold;
+  padding-right: 150px;
+}
+.Overhaul_heading{
+  font-family: Yeseva One;
+  font-size: 18px;
+  font-weight: bold;
+  padding-right: 180px;
+}
+.DesignerRepair_heading{
+  font-family: Yeseva One;
+  font-size: 18px;
+  font-weight: bold;
+  padding-right: 130px;
+}
+.TYPES-OF-REPAIR_list{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  list-style-type: none;
+  color: #959595;
+  font-size: 13px;
+  gap: 1rem;
+  padding: 13px 0 40px 40px;
+}
+.TYPES-OF-REPAIR_btn{
+font-size: 18px;
+font-family: Yeseva One;
+font-weight: 700;
+text-transform: uppercase;
+border: none;
+color: white;
+box-shadow: 0px 5px 15px 0px #E3B87333;
+background: #E3B873;
+padding: 17px 22px;
+cursor: pointer;
+margin-right: 100;
 }
